--- a/location_sharing/web/index.html
+++ b/location_sharing/web/index.html
@@ -31,6 +31,9 @@
 
   <title>location_sharing</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Google Maps JavaScript API - required for map on web. Replace YOUR_GOOGLE_MAPS_API_KEY with your key from Google Cloud Console. -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY"></script>
 </head>
 <body>
   <!--
